# qsl-protocol

./: .gitignore  AGENTS.md  CHAT_STARTER.md  CHECKLIST_PROTOCOL_CHANGE.md  CLAUDE.md  CODEX_RULES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  FORMAL_VERIFICATION_PLAN.md  GOALS.md  LICENSE  Makefile  NEXT_ACTIONS.md  NOTICE  PROJECT_CHARTER.md  PROVENANCE.md  QSL_PUBLIC_RELEASE_PLAN.md  README.md  README_PHASE4.md  ROADMAP.md  SECURITY.md  SIGNED_RELEASES_RUNBOOK.md  START_HERE.md  START_HERE_2.md  STATUS.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRACEABILITY.md  main.rs  requirements-ci.txt
apps/qshield-cli/: Cargo.toml  README.md
apps/qshield-cli/src/: actor.rs  config.rs  fsutil.rs  main.rs  relay_client.rs  store.rs  util.rs
apps/qshield-cli/src/commands/: attachment.rs  establish.rs  init.rs  mod.rs  recv.rs  register.rs  relay.rs  rotate.rs  send.rs  status.rs
apps/qshield-cli/tests/: na_0318_qshield_ack_commit.rs  na_0319_metadata_runtime_identifier_padding.rs  na_0320_metadata_runtime_sanitized_retention.rs  na_0322_metadata_runtime_timing_traffic_measurement.rs  na_0324_metadata_runtime_timing_traffic_instrumentation.rs  na_0327_metadata_runtime_retry_cadence_normalization.rs  na_0329_metadata_runtime_bounded_jitter.rs  na_0331_metadata_runtime_batching.rs  na_0335_metadata_runtime_cover_traffic_prototype.rs  na_0337_metadata_runtime_padding_bucket_expansion.rs  na_0339_metadata_runtime_attachment_size_class.rs
apps/qsl-tui/: Cargo.toml  README.md
apps/qsl-tui/src/: demo.rs  lib.rs  main.rs  relay.rs
apps/qsl-tui/tests/: local_e2e.rs  meta_line.rs  metadata_visibility.rs
qsl/qsl-client/qsc/: Cargo.toml  LOCAL_TWO_CLIENT_RUNBOOK.md  README.md  REMOTE_AWS_ISSUE_LEDGER.md  REMOTE_SOAK_BASELINE_AWS_2026-02-26.md  REMOTE_SOAK_PLAYBOOK.md  REMOTE_TWO_CLIENT_AWS_RUNBOOK.md
qsl/qsl-client/qsc-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
qsl/qsl-client/qsc-desktop/src-tauri/capabilities/: default.json
qsl/qsl-client/qsc-desktop/src-tauri/src/: main.rs  model.rs  qsc.rs
qsl/qsl-client/qsc/fuzz/: Cargo.toml
qsl/qsl-client/qsc/fuzz/corpus/qsc_payload_boundaries/: attachment_confirm.json  attachment_descriptor.json  file_confirm.json  file_manifest.json  receipt.json
qsl/qsl-client/qsc/fuzz/fuzz_targets/: qsc_binding_semantics.rs  qsc_payload_boundaries.rs  qsc_route_http.rs  qsc_vault_envelope.rs
qsl/qsl-client/qsc/scripts/: remote_soak.py
qsl/qsl-client/qsc/src/: envelope.rs  lib.rs  main.rs  vault.rs
qsl/qsl-client/qsc/src/adversarial/: binding_fuzz.rs  mod.rs  payload.rs  route.rs  vault_format.rs
qsl/qsl-client/qsc/src/attachments/: mod.rs
qsl/qsl-client/qsc/src/cmd/: mod.rs
qsl/qsl-client/qsc/src/contacts/: mod.rs
qsl/qsl-client/qsc/src/dedup/: mod.rs
qsl/qsl-client/qsc/src/fs_store/: mod.rs
qsl/qsl-client/qsc/src/handshake/: mod.rs
qsl/qsl-client/qsc/src/identity/: mod.rs
qsl/qsl-client/qsc/src/model/: mod.rs
qsl/qsl-client/qsc/src/output/: mod.rs
qsl/qsl-client/qsc/src/protocol_state/: mod.rs
qsl/qsl-client/qsc/src/relay/: mod.rs
qsl/qsl-client/qsc/src/store/: mod.rs
qsl/qsl-client/qsc/src/timeline/: mod.rs
qsl/qsl-client/qsc/src/transport/: mod.rs
qsl/qsl-client/qsc/src/tui/: controller.rs  mod.rs  render.rs  script.rs
qsl/qsl-client/qsc/src/vault/: mod.rs  protection.rs
qsl/qsl-client/qsc/tests/: NA_0633_eng0038_reproduction.rs  NA_0634_full_identity_provisioning.rs  NA_0639_wf0022_atomic_write_crash_window.rs  NA_0640_full_stack_e2e.rs  NA_0640_tui_focus_semantics.rs  NA_0644_ack_client.rs  NA_0645_relay_url_policy_cli.rs  NA_0649_gui_surface.rs  NA_0658_vault_protections.rs  NA_0663_relay_tls_trust.rs  NA_0671_vault_kdf_cost.rs  NA_0672_relay_server_info.rs  a2_signature_provider_rng_failure.rs  ack_camouflage.rs  adversarial_miri.rs  adversarial_properties.rs  attachment_streaming_na0197c.rs  attachments_contract_na0217h.rs  aws_file_confirmation_replay_na0192b.rs  aws_file_medium_boundary_na0192a.rs  aws_file_robustness_na0186.rs  aws_r2_file_integrity_na0189.rs  aws_tui_handshake_na0191.rs  b1_signature_provider_rng_failure.rs  binding_negative_vector_consumer.rs  cli.rs  cli_identity_rotation_provider_rng_failure.rs  common_isolation_na0171.rs  contacts_verify_block.rs  desktop_gui_contract_na0215b.rs  diagnostics.rs  envelope.rs  file_transfer_mvp.rs  fs_store_contract_na0217b.rs  handshake_contract_na0217i.rs  handshake_mvp.rs  handshake_provider_error_no_mutation.rs  handshake_security_closure.rs  identity_binding.rs  identity_foundation_contract_na0217d.rs  (+113 more)
qsl/qsl-client/qsc/tests/common/: mod.rs
tools/actors/refimpl_actor_rs/: Cargo.toml
tools/actors/refimpl_actor_rs/src/: main.rs
tools/refimpl/quantumshield_refimpl/: Cargo.toml  README.md
tools/refimpl/quantumshield_refimpl/LICENSES/: NOTICE.txt
tools/refimpl/quantumshield_refimpl/docs/: API_CONTRACTS.md
tools/refimpl/quantumshield_refimpl/src/: lib.rs  refimpl_error.rs
tools/refimpl/quantumshield_refimpl/src/codec/: mod.rs
tools/refimpl/quantumshield_refimpl/src/crypto/: mod.rs  stdcrypto.rs  traits.rs
tools/refimpl/quantumshield_refimpl/src/kt/: canonical.rs  mod.rs
tools/refimpl/quantumshield_refimpl/src/qse/: envelope.rs  mod.rs
tools/refimpl/quantumshield_refimpl/src/qsp/: constants.rs  handshake.rs  mod.rs  ratchet.rs  state.rs  types.rs
tools/refimpl/quantumshield_refimpl/src/suite2/: binding.rs  establish.rs  mod.rs  parse.rs  ratchet.rs  scka.rs  state.rs  types.rs
tools/refimpl/quantumshield_refimpl/tests/: kt_verifier_vectors.rs  na_0071_header_key_derivation.rs  na_0241_demo_downgrade_no_mutation.rs  na_0243_skipped_key_decrypt_no_mutation.rs  na_0300_core_replay_reject_no_mutation.rs  na_0301_suite2_negotiation_downgrade.rs  na_0302_suite2_negotiation_vectors.rs  na_0310_qsc_suite_id_vector_oracle.rs  parse_only_vectors.rs  pqkem768.rs  qse_bucket_confidentiality.rs  signature_provider_boundary.rs  suite2_bounded_receive.rs  suite2_combined_boundary.rs  suite2_handshake_security.rs  suite2_scka_sender.rs
tools/refimpl/quantumshield_refimpl/vectors/: README.md  parse_only.json
(+2050 files in other folders)
