[package]
name = "qshield-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qshield"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
hex = "0.4.3"
tiny_http = "0.12.0"
ureq = { version = "2.9.6", features = ["json"] }
