[package]
name = "qsl-tui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
ratatui = "0.28"
rand = "0.8"
x25519-dalek = "2"

quantumshield_refimpl = { path = "../../tools/refimpl/quantumshield_refimpl" }
