[package]
name = "qsc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
keyring = { version = "3.6.3", optional = true, features = ["apple-native", "windows-native", "sync-secret-service"] }
rand_core = "0.6"
ratatui-core = { version = "0.1.0", features = ["std", "layout-cache", "underline-color"] }
ratatui-crossterm = "0.1.0"
ratatui-widgets = { version = "0.3.0", features = ["all-widgets", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
quantumshield_refimpl = { path = "../../../tools/refimpl/quantumshield_refimpl", features = ["pqcrypto"] }

[features]
default = []
keychain = ["dep:keyring"]

[dev-dependencies]
assert_cmd = "2"
# NA-0634 (D571): test-only — compute fingerprint(kem_pk, sig_pk) for the wrong-signing-key negative.
sha2 = "0.10"
axum = "0.7"
predicates = "3"
proptest = "1"
qsl_attachments = { package = "qsl-attachments", git = "https://github.com/QuantumShieldLabs/qsl-attachments.git", rev = "1e1ae272a4cbfbb5d76fab634b2cda0fe9b12b34" }
# NA-0640 (D576): test-only — run the REAL relay in-process for the full-stack e2e round-trip.
qsl_server = { package = "qsl-server", git = "https://github.com/QuantumShieldLabs/qsl-server.git", rev = "19b9b02dbe1f2ae9bc246ff3a16890e56c073c3e" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
