[package]
name = "quantumshield_refimpl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "QuantumShield (QSP/QSE) reference implementation skeleton (audit-friendly, non-production)."

[features]
default = ["stdcrypto"]
stdcrypto = ["dep:sha2", "dep:tiny-keccak", "dep:aes-gcm", "dep:x25519-dalek", "dep:ed25519-dalek", "dep:rand", "dep:zeroize"]
pqcrypto = ["dep:pqcrypto-kyber", "dep:pqcrypto-dilithium"] # optional integration; verify algorithm mappings before production
vectors = ["dep:serde", "dep:serde_json", "dep:hex"]

[dependencies]
thiserror = "1"

sha2 = { version = "0.10", optional = true }
tiny-keccak = { version = "2", features = ["kmac"], optional = true }
aes-gcm = { version = "0.10", optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"], optional = true }

pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = "0.6"
