[package]
name = "qsc-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tempfile = "3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3"
